console: WIP - Add LoRaCloudDAS files

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -108,6 +108,18 @@
   "console.components.gateway-data-form.index.gsServerAddressDescription": "The address of the Gateway Server to connect to",
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Description for my new gateway",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Optional gateway description; can also be used to save notes about the gateway",
+  "console.components.loracloudDAS-form.index.idPlaceholder": "my-new-loracloud-das-id",
+  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Delete Loracloud integration",
+  "console.components.loracloudDAS-form.index.modalWarning": "Are you sure you want to delete integration \"{loracloudDASId}\"? Deleting an integration cannot be undone!",
+  "console.components.loracloudDAS-form.index.headers": "Headers",
+  "console.components.loracloudDAS-form.index.headersKeyPlaceholder": "Authorization",
+  "console.components.loracloudDAS-form.index.headersValuePlaceholder": "Bearer my-auth-token",
+  "console.components.loracloudDAS-form.index.headersAdd": "Add header entry",
+  "console.components.loracloudDAS-form.index.headersValidateRequired": "All header entry values are required. Please remove empty entries.",
+  "console.components.loracloudDAS-form.index.token": "LoRaCloud DAS token",
+  "console.components.loracloudDAS-form.index.tokenDesc": "The token will be provided to LoRaCloud DAS.",
+  "console.components.loracloudDAS-form.index.port": "200",
+  "console.components.loracloudDAS-form.index.portDesc": "LoRaWAN port used for DAS messages.",
   "console.components.organization-form.index.orgDescPlaceholder": "Description for my new organization",
   "console.components.organization-form.index.orgDescDescription": "Optional organization description; can also be used to save notes about the organization",
   "console.components.organization-form.index.orgIdPlaceholder": "my-new-organization",
@@ -190,6 +202,8 @@
   "console.containers.freq-plans-select.index.description": "The frequency plan used by the end device",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Could not retrieve the list of available prefixes",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
+  "console.containers.loracloudDAS-table.index.format": "Format",
+  "console.containers.loracloudDAS-table.index.baseUrl": "Base URL",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "Cannot load user oganizations",
   "console.containers.pubsub-formats-select.index.title": "PubSub Format",
@@ -224,6 +238,9 @@
   "console.views.application-general-settings.index.deleteApp": "Delete application",
   "console.views.application-general-settings.index.modalWarning": "Are you sure you want to delete \"{appName}\"? This action cannot be undone and it will not be possible to reuse the application ID!",
   "console.views.application-general-settings.index.updateSuccess": "Successfully updated application",
+  "console.views.application-integrations-loracloudDAS-edit.index.editLoracloudDAS": "Edit LoRaCloud integration",
+  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Successfully updated LoRaCloud integration",
+  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Successfully deleted LoRaCloud integration",
   "console.views.application-integrations-mqtt.index.publicAddress": "Public Address",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Public TLS Address",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Generate new API Key",
@@ -347,6 +364,7 @@
   "lib.shared-messages.address": "Address",
   "lib.shared-messages.addressPlaceholder": "host",
   "lib.shared-messages.addWebhook": "Add Webhook",
+  "lib.shared-messages.addLoracloudDAS": "Add LoRaCloud DAS",
   "lib.shared-messages.admin": "Admin",
   "lib.shared-messages.all": "All",
   "lib.shared-messages.altitude": "Altitude",
@@ -456,6 +474,7 @@
   "lib.shared-messages.logout": "Logout",
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The East-West position in degrees, where 0 is the Prime Meridian (Greenwich)",
+  "lib.shared-messages.loracloudDAS": "LoRaCloud DAS",
   "lib.shared-messages.lorawanInformation": "LoRaWAN Information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN Options",
   "lib.shared-messages.macVersion": "MAC Version",
