--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -108,6 +108,18 @@
   "console.components.gateway-data-form.index.gsServerAddressDescription": "Xxx xxxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxxx xx",
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
+  "console.components.loracloudDAS-form.index.idPlaceholder": "xx-xxx-xxxxxxxxx-xxx-xx",
+  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx Xxxxxxxxx xxxxxxxxxxx",
+  "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDASId}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
+  "console.components.loracloudDAS-form.index.headers": "Xxxxxxx",
+  "console.components.loracloudDAS-form.index.headersKeyPlaceholder": "Xxxxxxxxxxxxx",
+  "console.components.loracloudDAS-form.index.headersValuePlaceholder": "Xxxxxx xx-xxxx-xxxxx",
+  "console.components.loracloudDAS-form.index.headersAdd": "Xxx xxxxxx xxxxx",
+  "console.components.loracloudDAS-form.index.headersValidateRequired": "Xxx xxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
+  "console.components.loracloudDAS-form.index.token": "XxXxXxxxx XXX xxxxx",
+  "console.components.loracloudDAS-form.index.tokenDesc": "Xxx xxxxx xxxx xx xxxxxxxx xx XxXxXxxxx XXX.",
+  "console.components.loracloudDAS-form.index.port": "xxx",
+  "console.components.loracloudDAS-form.index.portDesc": "XxXxXXX xxxx xxxx xxx XXX xxxxxxxx.",
   "console.components.organization-form.index.orgDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxxxxxxx",
   "console.components.organization-form.index.orgDescDescription": "Xxxxxxxx xxxxxxxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxxxxxxx",
   "console.components.organization-form.index.orgIdPlaceholder": "xx-xxx-xxxxxxxxxxxx",
@@ -190,6 +202,8 @@
   "console.containers.freq-plans-select.index.description": "Xxx xxxxxxxxx xxxx xxxx xx xxx xxx xxxxxx",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxx xxx xxxxxxxx xxx xxxx xx xxxxxxxxx xxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
+  "console.containers.loracloudDAS-table.index.format": "Xxxxxx",
+  "console.containers.loracloudDAS-table.index.baseUrl": "Xxxx XXX",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxxx xxxx xxxx xxxxxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "XxxXxx Xxxxxx",
@@ -224,6 +238,9 @@
   "console.views.application-general-settings.index.deleteApp": "Xxxxxx xxxxxxxxxxx",
   "console.views.application-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{appName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxxxxxx XX!",
   "console.views.application-general-settings.index.updateSuccess": "Xxxxxxxxxxxx xxxxxxx xxxxxxxxxxx",
+  "console.views.application-integrations-loracloudDAS-edit.index.editLoracloudDAS": "Xxxx XxXxXxxxx xxxxxxxxxxx",
+  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx xxxxxxxxxxx",
+  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx xxxxxxxxxxx",
   "console.views.application-integrations-mqtt.index.publicAddress": "Xxxxxx Xxxxxxx",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Xxxxxx XXX Xxxxxxx",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Xxxxxxxx xxx XXX Xxx",
@@ -347,6 +364,7 @@
   "lib.shared-messages.address": "Xxxxxxx",
   "lib.shared-messages.addressPlaceholder": "xxxx",
   "lib.shared-messages.addWebhook": "Xxx Xxxxxxx",
+  "lib.shared-messages.addLoracloudDAS": "Xxx XxXxXxxxx XXX",
   "lib.shared-messages.admin": "Xxxxx",
   "lib.shared-messages.all": "Xxx",
   "lib.shared-messages.altitude": "Xxxxxxxx",
@@ -456,6 +474,7 @@
   "lib.shared-messages.logout": "Xxxxxx",
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx Xxxx-Xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx Xxxxx Xxxxxxxx (Xxxxxxxxx)",
+  "lib.shared-messages.loracloudDAS": "XxXxXxxxx XXX",
   "lib.shared-messages.lorawanInformation": "XxXxXXX Xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX Xxxxxxx",
   "lib.shared-messages.macVersion": "XXX Xxxxxxx",
