console: WIP - Compiled and console loaded without errors

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -204,6 +204,8 @@
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
   "console.containers.loracloudDAS-table.index.format": "Format",
   "console.containers.loracloudDAS-table.index.baseUrl": "Base URL",
+  "console.containers.loracloudDASs-table.index.format": "Format",
+  "console.containers.loracloudDASs-table.index.baseUrl": "Base URL",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "Cannot load user oganizations",
   "console.containers.pubsub-formats-select.index.title": "PubSub Format",
@@ -474,7 +476,7 @@
   "lib.shared-messages.logout": "Logout",
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The East-West position in degrees, where 0 is the Prime Meridian (Greenwich)",
-  "lib.shared-messages.loracloudDAS": "LoRaCloud DAS",
+  "lib.shared-messages.loracloudDASs": "LoRaCloud DAS",
   "lib.shared-messages.lorawanInformation": "LoRaWAN Information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN Options",
   "lib.shared-messages.macVersion": "MAC Version",
