--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -204,6 +204,8 @@
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
   "console.containers.loracloudDAS-table.index.format": "Xxxxxx",
   "console.containers.loracloudDAS-table.index.baseUrl": "Xxxx XXX",
+  "console.containers.loracloudDASs-table.index.format": "Xxxxxx",
+  "console.containers.loracloudDASs-table.index.baseUrl": "Xxxx XXX",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxxx xxxx xxxx xxxxxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "XxxXxx Xxxxxx",
@@ -474,7 +476,7 @@
   "lib.shared-messages.logout": "Xxxxxx",
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx Xxxx-Xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx Xxxxx Xxxxxxxx (Xxxxxxxxx)",
-  "lib.shared-messages.loracloudDAS": "XxXxXxxxx XXX",
+  "lib.shared-messages.loracloudDASs": "XxXxXxxxx XXX",
   "lib.shared-messages.lorawanInformation": "XxXxXXX Xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX Xxxxxxx",
   "lib.shared-messages.macVersion": "XXX Xxxxxxx",
