console: WIP - Clear LoRaCloud DAS form, regexp placeholder for token

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -111,14 +111,9 @@
   "console.components.loracloudDAS-form.index.idPlaceholder": "my-new-loracloud-das-id",
   "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Delete Loracloud integration",
   "console.components.loracloudDAS-form.index.modalWarning": "Are you sure you want to delete integration \"{loracloudDASId}\"? Deleting an integration cannot be undone!",
-  "console.components.loracloudDAS-form.index.headers": "Headers",
-  "console.components.loracloudDAS-form.index.headersKeyPlaceholder": "Authorization",
-  "console.components.loracloudDAS-form.index.headersValuePlaceholder": "Bearer my-auth-token",
-  "console.components.loracloudDAS-form.index.headersAdd": "Add header entry",
-  "console.components.loracloudDAS-form.index.headersValidateRequired": "All header entry values are required. Please remove empty entries.",
   "console.components.loracloudDAS-form.index.token": "LoRaCloud DAS token",
   "console.components.loracloudDAS-form.index.tokenDesc": "The token will be provided to LoRaCloud DAS.",
-  "console.components.loracloudDAS-form.index.port": "200",
+  "console.components.loracloudDAS-form.index.portPlaceholder": "200",
   "console.components.loracloudDAS-form.index.portDesc": "LoRaWAN port used for DAS messages.",
   "console.components.organization-form.index.orgDescPlaceholder": "Description for my new organization",
   "console.components.organization-form.index.orgDescDescription": "Optional organization description; can also be used to save notes about the organization",
@@ -476,7 +471,9 @@
   "lib.shared-messages.logout": "Logout",
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The East-West position in degrees, where 0 is the Prime Meridian (Greenwich)",
-  "lib.shared-messages.loracloudDASs": "LoRaCloud DAS",
+  "lib.shared-messages.loracloudDASs": "LoRaCloudDAS",
+  "lib.shared-messages.loracloudDASBaseUrl": "LoRaCloud DAS server URL",
+  "lib.shared-messages.loracloudDASId": "LoRaCloud DAS ID",
   "lib.shared-messages.lorawanInformation": "LoRaWAN Information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN Options",
   "lib.shared-messages.macVersion": "MAC Version",
