--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -111,14 +111,9 @@
   "console.components.loracloudDAS-form.index.idPlaceholder": "xx-xxx-xxxxxxxxx-xxx-xx",
   "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx Xxxxxxxxx xxxxxxxxxxx",
   "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDASId}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
-  "console.components.loracloudDAS-form.index.headers": "Xxxxxxx",
-  "console.components.loracloudDAS-form.index.headersKeyPlaceholder": "Xxxxxxxxxxxxx",
-  "console.components.loracloudDAS-form.index.headersValuePlaceholder": "Xxxxxx xx-xxxx-xxxxx",
-  "console.components.loracloudDAS-form.index.headersAdd": "Xxx xxxxxx xxxxx",
-  "console.components.loracloudDAS-form.index.headersValidateRequired": "Xxx xxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
   "console.components.loracloudDAS-form.index.token": "XxXxXxxxx XXX xxxxx",
   "console.components.loracloudDAS-form.index.tokenDesc": "Xxx xxxxx xxxx xx xxxxxxxx xx XxXxXxxxx XXX.",
-  "console.components.loracloudDAS-form.index.port": "xxx",
+  "console.components.loracloudDAS-form.index.portPlaceholder": "xxx",
   "console.components.loracloudDAS-form.index.portDesc": "XxXxXXX xxxx xxxx xxx XXX xxxxxxxx.",
   "console.components.organization-form.index.orgDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxxxxxxx",
   "console.components.organization-form.index.orgDescDescription": "Xxxxxxxx xxxxxxxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxxxxxxx",
@@ -476,7 +471,9 @@
   "lib.shared-messages.logout": "Xxxxxx",
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx Xxxx-Xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx Xxxxx Xxxxxxxx (Xxxxxxxxx)",
-  "lib.shared-messages.loracloudDASs": "XxXxXxxxx XXX",
+  "lib.shared-messages.loracloudDASs": "XxXxXxxxxXXX",
+  "lib.shared-messages.loracloudDASBaseUrl": "XxXxXxxxx XXX xxxxxx XXX",
+  "lib.shared-messages.loracloudDASId": "XxXxXxxxx XXX XX",
   "lib.shared-messages.lorawanInformation": "XxXxXXX Xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX Xxxxxxx",
   "lib.shared-messages.macVersion": "XXX Xxxxxxx",
