console: WIP - List associated app & register new Hardcoded DeviceID for the list

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -108,7 +108,7 @@
   "console.components.gateway-data-form.index.gsServerAddressDescription": "The address of the Gateway Server to connect to",
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Description for my new gateway",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Optional gateway description; can also be used to save notes about the gateway",
-  "console.components.loracloudDAS-form.index.idPlaceholder": "my-new-loracloud-das-id",
+  "console.components.loracloudDAS-form.index.idPlaceholder": "device-id",
   "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Delete Loracloud integration",
   "console.components.loracloudDAS-form.index.modalWarning": "Are you sure you want to delete integration \"{loracloudDASId}\"? Deleting an integration cannot be undone!",
   "console.components.loracloudDAS-form.index.token": "LoRaCloud DAS token",
@@ -197,10 +197,11 @@
   "console.containers.freq-plans-select.index.description": "The frequency plan used by the end device",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Could not retrieve the list of available prefixes",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
-  "console.containers.loracloudDAS-table.index.format": "Format",
-  "console.containers.loracloudDAS-table.index.baseUrl": "Base URL",
-  "console.containers.loracloudDASs-table.index.format": "Format",
-  "console.containers.loracloudDASs-table.index.baseUrl": "Base URL",
+  "console.containers.loracloudDAS-formats-select.index.title": "LoRaCloud Format",
+  "console.containers.loracloudDAS-formats-select.index.warning": "Could not retrieve the list of available loracloud formats",
+  "console.containers.loracloudDASs-table.index.packageName": "Package name",
+  "console.containers.loracloudDASs-table.index.port": "Port",
+  "console.containers.loracloudDASs-table.index.deviceName": "Device ID",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "Cannot load user oganizations",
   "console.containers.pubsub-formats-select.index.title": "PubSub Format",
@@ -471,9 +472,8 @@
   "lib.shared-messages.logout": "Logout",
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The East-West position in degrees, where 0 is the Prime Meridian (Greenwich)",
-  "lib.shared-messages.loracloudDASs": "LoRaCloudDAS",
+  "lib.shared-messages.loracloudDASs": "LoRaCloud DAS",
   "lib.shared-messages.loracloudDASBaseUrl": "LoRaCloud DAS server URL",
-  "lib.shared-messages.loracloudDASId": "LoRaCloud DAS ID",
   "lib.shared-messages.lorawanInformation": "LoRaWAN Information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN Options",
   "lib.shared-messages.macVersion": "MAC Version",
