--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -108,7 +108,7 @@
   "console.components.gateway-data-form.index.gsServerAddressDescription": "Xxx xxxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxxx xx",
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
-  "console.components.loracloudDAS-form.index.idPlaceholder": "xx-xxx-xxxxxxxxx-xxx-xx",
+  "console.components.loracloudDAS-form.index.idPlaceholder": "xxxxxx-xx",
   "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx Xxxxxxxxx xxxxxxxxxxx",
   "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDASId}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
   "console.components.loracloudDAS-form.index.token": "XxXxXxxxx XXX xxxxx",
@@ -197,10 +197,11 @@
   "console.containers.freq-plans-select.index.description": "Xxx xxxxxxxxx xxxx xxxx xx xxx xxx xxxxxx",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxx xxx xxxxxxxx xxx xxxx xx xxxxxxxxx xxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
-  "console.containers.loracloudDAS-table.index.format": "Xxxxxx",
-  "console.containers.loracloudDAS-table.index.baseUrl": "Xxxx XXX",
-  "console.containers.loracloudDASs-table.index.format": "Xxxxxx",
-  "console.containers.loracloudDASs-table.index.baseUrl": "Xxxx XXX",
+  "console.containers.loracloudDAS-formats-select.index.title": "XxXxXxxxx Xxxxxx",
+  "console.containers.loracloudDAS-formats-select.index.warning": "Xxxxx xxx xxxxxxxx xxx xxxx xx xxxxxxxxx xxxxxxxxx xxxxxxx",
+  "console.containers.loracloudDASs-table.index.packageName": "Xxxxxxx xxxx",
+  "console.containers.loracloudDASs-table.index.port": "Xxxx",
+  "console.containers.loracloudDASs-table.index.deviceName": "Xxxxxx XX",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxxx xxxx xxxx xxxxxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "XxxXxx Xxxxxx",
@@ -471,9 +472,8 @@
   "lib.shared-messages.logout": "Xxxxxx",
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx Xxxx-Xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx Xxxxx Xxxxxxxx (Xxxxxxxxx)",
-  "lib.shared-messages.loracloudDASs": "XxXxXxxxxXXX",
+  "lib.shared-messages.loracloudDASs": "XxXxXxxxx XXX",
   "lib.shared-messages.loracloudDASBaseUrl": "XxXxXxxxx XXX xxxxxx XXX",
-  "lib.shared-messages.loracloudDASId": "XxXxXxxxx XXX XX",
   "lib.shared-messages.lorawanInformation": "XxXxXXX Xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX Xxxxxxx",
   "lib.shared-messages.macVersion": "XXX Xxxxxxx",
