--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -110,7 +110,7 @@
   "console.components.gateway-data-form.index.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
   "console.components.loracloudDAS-form.index.idPlaceholder": "xxxxxx-xx",
   "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx Xxxxxxxxx xxxxxxxxxxx",
-  "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDASId}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
+  "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDAS_id}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
   "console.components.loracloudDAS-form.index.token": "XxXxXxxxx XXX xxxxx",
   "console.components.loracloudDAS-form.index.tokenDesc": "Xxx xxxxx xxxx xx xxxxxxxx xx XxXxXxxxx XXX.",
   "console.components.loracloudDAS-form.index.portPlaceholder": "xxx",
