console: Implemented delete LoRaCloud DAS app package

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -109,8 +109,8 @@
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Description for my new gateway",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Optional gateway description; can also be used to save notes about the gateway",
   "console.components.loracloudDAS-form.index.idPlaceholder": "device-id",
-  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Delete Loracloud integration",
-  "console.components.loracloudDAS-form.index.modalWarning": "Are you sure you want to delete integration \"{loracloudDAS_id}\"? Deleting an integration cannot be undone!",
+  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Delete LoRaCloud DAS integration",
+  "console.components.loracloudDAS-form.index.modalWarning": "Are you sure you want to delete integration port \"{port}\" of \"{deviceId}\"? Deleting an integration cannot be undone!",
   "console.components.loracloudDAS-form.index.token": "LoRaCloud DAS token",
   "console.components.loracloudDAS-form.index.tokenDesc": "The token will be provided to LoRaCloud DAS.",
   "console.components.loracloudDAS-form.index.portPlaceholder": "200",
@@ -237,8 +237,8 @@
   "console.views.application-general-settings.index.modalWarning": "Are you sure you want to delete \"{appName}\"? This action cannot be undone and it will not be possible to reuse the application ID!",
   "console.views.application-general-settings.index.updateSuccess": "Successfully updated application",
   "console.views.application-integrations-loracloudDAS-edit.index.editLoracloudDAS": "Edit LoRaCloud integration",
-  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Successfully updated LoRaCloud integration",
-  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Successfully deleted LoRaCloud integration",
+  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Successfully updated LoRaCloud DAS integration",
+  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Successfully deleted LoRaCloud DAS integration",
   "console.views.application-integrations-mqtt.index.publicAddress": "Public Address",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Public TLS Address",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Generate new API Key",
