--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -109,8 +109,8 @@
   "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
   "console.components.gateway-data-form.index.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
   "console.components.loracloudDAS-form.index.idPlaceholder": "xxxxxx-xx",
-  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx Xxxxxxxxx xxxxxxxxxxx",
-  "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx \"{loracloudDAS_id}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
+  "console.components.loracloudDAS-form.index.deleteLoracloudDAS": "Xxxxxx XxXxXxxxx XXX xxxxxxxxxxx",
+  "console.components.loracloudDAS-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxxxxxx xxxx \"{port}\" xx \"{deviceId}\"? Xxxxxxxx xx xxxxxxxxxxx xxxxxx xx xxxxxx!",
   "console.components.loracloudDAS-form.index.token": "XxXxXxxxx XXX xxxxx",
   "console.components.loracloudDAS-form.index.tokenDesc": "Xxx xxxxx xxxx xx xxxxxxxx xx XxXxXxxxx XXX.",
   "console.components.loracloudDAS-form.index.portPlaceholder": "xxx",
@@ -237,8 +237,8 @@
   "console.views.application-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{appName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxxxxxx XX!",
   "console.views.application-general-settings.index.updateSuccess": "Xxxxxxxxxxxx xxxxxxx xxxxxxxxxxx",
   "console.views.application-integrations-loracloudDAS-edit.index.editLoracloudDAS": "Xxxx XxXxXxxxx xxxxxxxxxxx",
-  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx xxxxxxxxxxx",
-  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx xxxxxxxxxxx",
+  "console.views.application-integrations-loracloudDAS-edit.index.updateSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx XXX xxxxxxxxxxx",
+  "console.views.application-integrations-loracloudDAS-edit.index.deleteSuccess": "Xxxxxxxxxxxx xxxxxxx XxXxXxxxx XXX xxxxxxxxxxx",
   "console.views.application-integrations-mqtt.index.publicAddress": "Xxxxxx Xxxxxxx",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Xxxxxx XXX Xxxxxxx",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Xxxxxxxx xxx XXX Xxx",
