--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -388,12 +388,10 @@
   "lib.shared-messages.applicationServerAddress": "Application Server Address",
   "lib.shared-messages.approve": "Approve",
   "lib.shared-messages.appSKey": "AppSKey",
-  "lib.shared-messages.automaticUpdates": "Automatic Updates",
   "lib.shared-messages.brand": "Brand",
   "lib.shared-messages.cancel": "Cancel",
   "lib.shared-messages.changeLocation": "Change location settings",
   "lib.shared-messages.changePassword": "Change Password",
-  "lib.shared-messages.channel": "Channel",
   "lib.shared-messages.clear": "Clear",
   "lib.shared-messages.collaborator": "Collaborator",
   "lib.shared-messages.collaboratorCounted": "{count, plural, one {Collaborator} other {Collaborators}}",
@@ -454,13 +452,9 @@
   "lib.shared-messages.gatewayDescription": "Gateway Description",
   "lib.shared-messages.gatewayEUI": "Gateway EUI",
   "lib.shared-messages.gatewayID": "Gateway ID",
-  "lib.shared-messages.gatewayLocation": "Gateway Location",
   "lib.shared-messages.gatewayName": "Gateway Name",
   "lib.shared-messages.gateways": "Gateways",
-  "lib.shared-messages.gatewayScheduleDownlinkLate": "Schedule Downlink Late",
   "lib.shared-messages.gatewayServerAddress": "Gateway Server Address",
-  "lib.shared-messages.gatewayStatus": "Gateway Status",
-  "lib.shared-messages.gatewayUpdateOptions": "Gateway Updates",
   "lib.shared-messages.general": "General",
   "lib.shared-messages.generalInformation": "General Information",
   "lib.shared-messages.generalSettings": "General Settings",
@@ -529,7 +523,6 @@
   "lib.shared-messages.privacyPolicy": "Privacy Policy",
   "lib.shared-messages.provider": "Provider",
   "lib.shared-messages.provisionedOnExternalJoinServer": "Provisioned on external Join Server",
-  "lib.shared-messages.public": "Public",
   "lib.shared-messages.pubsubBaseTopic": "Base Topic",
   "lib.shared-messages.pubsubFormat": "PubSub Format",
   "lib.shared-messages.pubsubId": "PubSub ID",
@@ -545,7 +538,6 @@
   "lib.shared-messages.secure": "Secure",
   "lib.shared-messages.settings": "Settings",
   "lib.shared-messages.sNwkSIKey": "SNwkSIntKey",
-  "lib.shared-messages.stable": "Stable",
   "lib.shared-messages.state": "State",
   "lib.shared-messages.stateApproved": "Approved",
   "lib.shared-messages.stateFlagged": "Flagged",
@@ -573,10 +565,11 @@
   "lib.shared-messages.users": "Users",
   "lib.shared-messages.validateAddress": "Wrong address format",
   "lib.shared-messages.validateAddressFormat": "Wrong address format, should be host or host:port",
+  "lib.shared-messages.validateAlphanum": "The value must be alphanumeric and contain no spaces",
   "lib.shared-messages.validateEmail": "Invalid email address",
   "lib.shared-messages.validateFormat": "Wrong format",
   "lib.shared-messages.validateInt32": "Invalid numeric format",
-  "lib.shared-messages.validateLatLong": "Invalid value format (valid format e.g. 52.15249000)",
+  "lib.shared-messages.validateLatLong": "Ivalid value format (valid format e.g. 52.15249000)",
   "lib.shared-messages.validateMqttUrl": "Invalid MQTT URL format",
   "lib.shared-messages.validatePasswordMatch": "Passwords should match",
   "lib.shared-messages.validateRequired": "This field is required",
@@ -584,7 +577,7 @@
   "lib.shared-messages.validateTooLong": "Too long",
   "lib.shared-messages.validateTooShort": "Too short",
   "lib.shared-messages.validateUrl": "Invalid URL format",
-  "lib.shared-messages.validateIdFormat": "This value may only contain lowercase letters, numbers and dashes (-)",
+  "lib.shared-messages.validateIdFormat": "IDs can only contain lowercase letters, numbers and dashes (-)",
   "lib.shared-messages.webhookBaseUrl": "Base URL",
   "lib.shared-messages.webhookFormat": "Webhook Format",
   "lib.shared-messages.webhookId": "Webhook ID",
