--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -388,12 +388,10 @@
   "lib.shared-messages.applicationServerAddress": "Xxxxxxxxxxx Xxxxxx Xxxxxxx",
   "lib.shared-messages.approve": "Xxxxxxx",
   "lib.shared-messages.appSKey": "XxxXXxx",
-  "lib.shared-messages.automaticUpdates": "Xxxxxxxxx Xxxxxxx",
   "lib.shared-messages.brand": "Xxxxx",
   "lib.shared-messages.cancel": "Xxxxxx",
   "lib.shared-messages.changeLocation": "Xxxxxx xxxxxxxx xxxxxxxx",
   "lib.shared-messages.changePassword": "Xxxxxx Xxxxxxxx",
-  "lib.shared-messages.channel": "Xxxxxxx",
   "lib.shared-messages.clear": "Xxxxx",
   "lib.shared-messages.collaborator": "Xxxxxxxxxxxx",
   "lib.shared-messages.collaboratorCounted": "{count, plural, =one {Xxxxxxxxxxxx} other {Xxxxxxxxxxxxx}}",
@@ -454,13 +452,9 @@
   "lib.shared-messages.gatewayDescription": "Xxxxxxx Xxxxxxxxxxx",
   "lib.shared-messages.gatewayEUI": "Xxxxxxx XXX",
   "lib.shared-messages.gatewayID": "Xxxxxxx XX",
-  "lib.shared-messages.gatewayLocation": "Xxxxxxx Xxxxxxxx",
   "lib.shared-messages.gatewayName": "Xxxxxxx Xxxx",
   "lib.shared-messages.gateways": "Xxxxxxxx",
-  "lib.shared-messages.gatewayScheduleDownlinkLate": "Xxxxxxxx Xxxxxxxx Xxxx",
   "lib.shared-messages.gatewayServerAddress": "Xxxxxxx Xxxxxx Xxxxxxx",
-  "lib.shared-messages.gatewayStatus": "Xxxxxxx Xxxxxx",
-  "lib.shared-messages.gatewayUpdateOptions": "Xxxxxxx Xxxxxxx",
   "lib.shared-messages.general": "Xxxxxxx",
   "lib.shared-messages.generalInformation": "Xxxxxxx Xxxxxxxxxxx",
   "lib.shared-messages.generalSettings": "Xxxxxxx Xxxxxxxx",
@@ -529,7 +523,6 @@
   "lib.shared-messages.privacyPolicy": "Xxxxxxx Xxxxxx",
   "lib.shared-messages.provider": "Xxxxxxxx",
   "lib.shared-messages.provisionedOnExternalJoinServer": "Xxxxxxxxxxx xx xxxxxxxx Xxxx Xxxxxx",
-  "lib.shared-messages.public": "Xxxxxx",
   "lib.shared-messages.pubsubBaseTopic": "Xxxx Xxxxx",
   "lib.shared-messages.pubsubFormat": "XxxXxx Xxxxxx",
   "lib.shared-messages.pubsubId": "XxxXxx XX",
@@ -545,7 +538,6 @@
   "lib.shared-messages.secure": "Xxxxxx",
   "lib.shared-messages.settings": "Xxxxxxxx",
   "lib.shared-messages.sNwkSIKey": "XXxxXXxxXxx",
-  "lib.shared-messages.stable": "Xxxxxx",
   "lib.shared-messages.state": "Xxxxx",
   "lib.shared-messages.stateApproved": "Xxxxxxxx",
   "lib.shared-messages.stateFlagged": "Xxxxxxx",
@@ -573,10 +565,11 @@
   "lib.shared-messages.users": "Xxxxx",
   "lib.shared-messages.validateAddress": "Xxxxx xxxxxxx xxxxxx",
   "lib.shared-messages.validateAddressFormat": "Xxxxx xxxxxxx xxxxxx, xxxxxx xx xxxx xx xxxx:xxxx",
+  "lib.shared-messages.validateAlphanum": "Xxx xxxxx xxxx xx xxxxxxxxxxxx xxx xxxxxxx xx xxxxxx",
   "lib.shared-messages.validateEmail": "Xxxxxxx xxxxx xxxxxxx",
   "lib.shared-messages.validateFormat": "Xxxxx xxxxxx",
   "lib.shared-messages.validateInt32": "Xxxxxxx xxxxxxx xxxxxx",
-  "lib.shared-messages.validateLatLong": "Xxxxxxx xxxxx xxxxxx (xxxxx xxxxxx x.x. xx.xxxxxxxx)",
+  "lib.shared-messages.validateLatLong": "Xxxxxx xxxxx xxxxxx (xxxxx xxxxxx x.x. xx.xxxxxxxx)",
   "lib.shared-messages.validateMqttUrl": "Xxxxxxx XXXX XXX xxxxxx",
   "lib.shared-messages.validatePasswordMatch": "Xxxxxxxxx xxxxxx xxxxx",
   "lib.shared-messages.validateRequired": "Xxxx xxxxx xx xxxxxxxx",
@@ -584,7 +577,7 @@
   "lib.shared-messages.validateTooLong": "Xxx xxxx",
   "lib.shared-messages.validateTooShort": "Xxx xxxxx",
   "lib.shared-messages.validateUrl": "Xxxxxxx XXX xxxxxx",
-  "lib.shared-messages.validateIdFormat": "Xxxx xxxxx xxx xxxx xxxxxxx xxxxxxxxx xxxxxxx, xxxxxxx xxx xxxxxx (-)",
+  "lib.shared-messages.validateIdFormat": "XXx xxx xxxx xxxxxxx xxxxxxxxx xxxxxxx, xxxxxxx xxx xxxxxx (-)",
   "lib.shared-messages.webhookBaseUrl": "Xxxx XXX",
   "lib.shared-messages.webhookFormat": "Xxxxxxx Xxxxxx",
   "lib.shared-messages.webhookId": "Xxxxxxx XX",
